Fix scrollbar pointer events

--- a/client/src/components/Terminal.css
+++ b/client/src/components/Terminal.css
@@ -1,5 +1,5 @@
 #terminal {
-  pointer-events: none;
+  /* pointer-events: none; */
   line-height: 1.5;
   overflow: auto;
   padding: 1em;
